--- a/Presentation/Login/login.html
+++ b/Presentation/Login/login.html
@@ -4,13 +4,17 @@
     <title id="title" data-key="title">Login</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="login.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/variable/pretendardvariable.css"
+    />
   </head>
 
   <body>
     <select
       id="lang"
       style="
-        background-color: #F3F2ED;
+        background-color: #f3f2ed;
         position: absolute;
         top: 30px;
         right: 40px;
@@ -25,9 +29,9 @@
 
     <div class="container">
       <div class="image">
-        <img src="../../Assets/Main/loginstar1.png" class="loginstar1">
-        <img src="../../Assets/Main/loginstar2.png" class="loginstar2">
-        <img src="../../Assets/Main/loginstar3.png" class="loginstar3">
+        <img src="../../Assets/Main/loginstar1.png" class="loginstar1" />
+        <img src="../../Assets/Main/loginstar2.png" class="loginstar2" />
+        <img src="../../Assets/Main/loginstar3.png" class="loginstar3" />
       </div>
 
       <div class="login">
