--- a/Presentation/Profile/profile.html
+++ b/Presentation/Profile/profile.html
@@ -4,6 +4,10 @@
     <meta charset="utf-t" />
     <title>WeAre1ne</title>
     <link rel="stylesheet" href="profile2.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/variable/pretendardvariable.css"
+    />
   </head>
   <body>
     <div class="header">
@@ -30,8 +34,8 @@
     </div>
 
     <div class="background">
-      <img src="../../Assets/Main/profilestar1.png" class="profilestar1">
-      <img src="../../Assets/Main/profilestar2.png" class="profilestar2">
+      <img src="../../Assets/Main/profilestar1.png" class="profilestar1" />
+      <img src="../../Assets/Main/profilestar2.png" class="profilestar2" />
     </div>
 
     <div class="profile-wrapper">
