--- a/Presentation/Main/main.html
+++ b/Presentation/Main/main.html
@@ -4,6 +4,10 @@
     <meta charset="utf-t" />
     <title>WeAre1ne</title>
     <link rel="stylesheet" href="main.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/variable/pretendardvariable.css"
+    />
   </head>
   <body>
     <div class="header">
