--- a/Presentation/Profile/profile.html
+++ b/Presentation/Profile/profile.html
@@ -6,100 +6,88 @@
     <link rel="stylesheet" href="profile2.css" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/variable/pretendardvariable.css"
+      href="../../Presentation/Profile/profile.css"
     />
   </head>
   <body>
+    <img src="../../Assets/Main/WebLogo.svg" alt="Logo" class="logo" />
     <div class="header">
-      <img src="../../Assets/Main/Logo.svg" alt="Logo" class="logo" />
       <div class="menu">
-        <a href="">Home</a>
-        <a href="">Features</a>
-        <a href="">FAQs</a>
-        <a href="">About</a>
-      </div>
-      <div class="search-container">
-        <input
-          type="text"
-          name="Search"
-          class="search"
-          placeholder="Search..."
-        />
-        <img src="" />
-        <select class="user">
-          <option value="user">User</option>
-          <option value="Logout">Logout</option>
-        </select>
+        <div class="dropdown">
+          <a href="">근태관리</a>
+          <div class="dropdown-content">
+            <ul>
+              <li><a href="">공장추가</a></li>
+              <li><a href="">퇴근하기가</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="dropdown">
+          <a href="">운영지원</a>
+          <div class="dropdown-content">
+            <ul>
+              <li><a href="">창고채우기</a></li>
+              <li><a href="">당근</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="dropdown">
+          <a href="">공장관리</a>
+          <div class="dropdown-content">
+            <ul>
+              <li><a href="">공장장관리 </a></li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
 
-    <div class="background">
-      <img src="../../Assets/Main/profilestar1.png" class="profilestar1" />
-      <img src="../../Assets/Main/profilestar2.png" class="profilestar2" />
+
+    <div class="management">
+      <p>공장관리 > 공장장관리</p>
     </div>
 
+    
     <div class="profile-wrapper">
       <div class="profile-container">
         <div class="profile-header">
-          <img
-            src="../../Assets/Main/Profile.svg"
-            alt="User"
-            class="profile-pic"
-          />
+          <img src="../../Assets/Main/CatLogo.svg" alt="User" class="profile-pic" />
           <div class="profile-info">
-            <h2>@User</h2>
-            <p>user_email@gmail.com</p>
+            <h2 id="managerName">공장장님</h2>
           </div>
-          <button class="edit-button">Edit</button>
+          <button class="edit-button">수정하기</button>
         </div>
+
         <div class="profile-details">
-          <div class="detail-row">
-            <div class="detail">
-              <label for="name">Name</label>
-              <input type="text" id="name" placeholder="XXXXXXXXXX" />
-            </div>
-            <div class="detail">
-              <label for="department">Department</label>
-              <input type="text" id="department" placeholder="CSX" />
+          <div class="preview">
+            <div class="previews">
+              <ul id="post-list"></ul>
             </div>
           </div>
+
           <div class="detail-row">
             <div class="detail">
-              <label for="email">Email</label>
-              <input type="email" id="email" placeholder="XXXXXXXX@gmail.com" />
+              <label for="name">공장명</label>
+              <input type="text" id="factoryName" readonly>
             </div>
             <div class="detail">
-              <label for="degree">Degree</label>
-              <input type="text" id="degree" placeholder="B.Tech" />
+              <label for="department">공장번호</label>
+              <input type="text" id="factoryNumber" readonly>
             </div>
           </div>
-          <div class="detail-row">
-            <div class="detail">
-              <label for="dob">Date of Birth</label>
-              <input type="text" id="dob" placeholder="23/05/19XX" />
-            </div>
-            <div class="detail">
-              <label for="specialization">Specialization</label>
-              <input type="text" id="specialization" placeholder="XXX" />
-            </div>
-          </div>
-          <div class="detail-row">
-            <div class="detail">
-              <label for="mobile">Mobile</label>
-              <input type="text" id="mobile" placeholder="98490XXXXXX" />
-            </div>
+          
+          <div class="detail">
+            <label>공장 재고 관리</label>
+            <div id="partnershipsList"></div>
           </div>
         </div>
       </div>
     </div>
 
+
     <div class="footer">
       <div class="weare1ne">
-        <img
-          src="../../Assets/Main/Logo_mono.svg"
-          alt="Logo"
-          class="bottom-logo"
-        />
+        <img src="../../Assets/Main/Logo_mono.svg" alt="Logo" class="bottom-logo" />
         <div ckass="text">
           <div class="we">WeAre1ne</div>
           <div class="team">Team Calm Down</div>
@@ -124,5 +112,7 @@
         <img src="../../Assets/Main/Git.svg" alt="Icon" class="sns-icon" />
       </div>
     </div>
+
+    <script src="../../Presentation/Profile/profile.js"></script>
   </body>
 </html>
