[Feat] #22 - 하위메뉴바 수정

--- a/Presentation/Attendance/attendance.html
+++ b/Presentation/Attendance/attendance.html
@@ -11,36 +11,41 @@
   </head>
   <body>
     <img src="../../Assets/Main/WebLogo.svg" alt="Logo" class="logo" />
-    <div class="header">
-      <div class="menu">
-        <div class="dropdown">
-          <a href="">근태관리</a>
-          <div class="dropdown-content">
-            <ul>
-              <li><a href="">공장추가</a></li>
-              <li><a href="">퇴근하기가</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="dropdown">
-          <a href="">운영지원</a>
-          <div class="dropdown-content">
-            <ul>
-              <li><a href="">창고채우기</a></li>
-              <li><a href="">당근</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="dropdown">
-          <a href="">공장관리</a>
-          <div class="dropdown-content">
-            <ul>
-              <li><a href="">공장장관리 </a></li>
-            </ul>
-          </div>
-        </div>
+    <div id="wrap">
+      <div id="header">
+        <ul id="gnb" class="">
+          <li>
+            <a href="#">근태관리</a>
+            <div class="snb">
+              <ul>
+                <li>공장추가</li>
+                <li>퇴근하기</li>
+              </ul>
+            </div>
+          </li>
+
+          <li>
+            <a href="#">운영지원</a>
+            <div class="snb">
+              <ul>
+                <li>창고채우기</li>
+                <li>당근</li>
+              </ul>
+            </div>
+          </li>
+
+          <li>
+            <a href="#">공장관리</a>
+            <div class="snb">
+              <ul>
+                <li>공장장관리</li>
+              </ul>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
+
     <div class="hello">
       <div class="hello-container">
         <img
