[Feat] #24 - 메뉴-html 연결 및 css 수정

--- a/Presentation/Profile/profile.html
+++ b/Presentation/Profile/profile.html
@@ -15,8 +15,8 @@
             <a href="#">근태관리</a>
             <div class="snb">
               <ul>
-                <li>공장추가</li>
-                <li>퇴근하기</li>
+                <li><a href="../Main/main.html">공장추가</a></li>
+                <li><a href="../Attendance/attendance.html">퇴근하기</a></li>
               </ul>
             </div>
           </li>
@@ -35,7 +35,9 @@
             <a href="#">공장관리</a>
             <div class="snb">
               <ul>
-                <li>공장장관리</li>
+                <li>
+                  <a href="../Profile/profile.html">공장장관리</a>
+                </li>
               </ul>
             </div>
           </li>
