--- a/Presentation/Attendance/attendance.html
+++ b/Presentation/Attendance/attendance.html
@@ -18,8 +18,8 @@
             <a href="#">근태관리</a>
             <div class="snb">
               <ul>
-                <li>공장추가</li>
-                <li>퇴근하기</li>
+                <li><a href="../Main/main.html">공장추가</a></li>
+                <li><a href="../Attendance/attendance.html">퇴근하기</a></li>
               </ul>
             </div>
           </li>
@@ -38,7 +38,9 @@
             <a href="#">공장관리</a>
             <div class="snb">
               <ul>
-                <li>공장장관리</li>
+                <li>
+                  <a href="../Profile/profile.html">공장장관리</a>
+                </li>
               </ul>
             </div>
           </li>
