[Feat] #26 - 당근 페이지 구현

--- a/Presentation/Profile/profile.html
+++ b/Presentation/Profile/profile.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>WeAre1ne</title>
-    <link rel="stylesheet" href="profile2.css" />
     <link rel="stylesheet" href="../../Presentation/Profile/profile.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/variable/pretendardvariable.css"
+    />
   </head>
   <body>
     <img src="../../Assets/Main/WebLogo.svg" alt="Logo" class="logo" />
@@ -26,7 +29,7 @@
             <div class="snb">
               <ul>
                 <li>창고채우기</li>
-                <li>당근</li>
+                <li><a href="../Secondhand/secondhand.html">당근</a></li>
               </ul>
             </div>
           </li>
