--- a/Presentation/Filling/filling.html
+++ b/Presentation/Filling/filling.html
@@ -10,8 +10,8 @@
   </head>
 
   <body>
-    <img src="../../Assets/Main/WebLogo.svg" alt="Logo" class="logo" />
     <div id="wrap">
+      <img src="../../Assets/Main/HeaderLogo.svg" alt="Logo" class="logo" />
       <div id="header">
           <ul id="gnb" class="">
               <li>
@@ -43,6 +43,14 @@
                   </div>
               </li>
       </div>
+      <div class="search-container">
+        <input
+          type="text"
+          name="Search"
+          class="search"
+          placeholder="Search..."
+        />
+      </div>
   </div>
 
   <div class="display">
@@ -51,40 +59,40 @@
   
   <div class="warehouse">
     <div class="brand">
-        <img src="../../Assets/Main/LABNOSH.jpg" alt="brand1" class="brandlogo">
+        <img src="../../Assets/Main/LABNOSH.svg" alt="brand1" class="brandlogo">
         <div class="brandDescription">
             <h2><a href="https://labnosh.com/" target="_blank">LABNOSH</a></h2>
             <p>#단백질 #쿠키 #저당음료</p>
         </div>
         <button type="button" class="submit-button" onclick="addPartnership('LABNOSH')">
-            제휴맺기
+            제휴 맺기
         </button>
     </div>
     <div class="brand">
-        <img src="../../Assets/Main/CALOBYE.jpg" alt="brand2" class="brandlogo">
+        <img src="../../Assets/Main/CALOBYE.svg" alt="brand2" class="brandlogo">
         <div class="brandDescription">
             <h2><a href="https://www.calobye.com/best_html.php" target="_blank">CALOBYE</a></h2>
             <p>#김종국광고 #마그네슘 #단백질쉐이크</p>
         </div>
         <button type="button" class="submit-button" onclick="addPartnership('CALOBYE')">
-            제휴맺기
+            제휴 맺기
         </button>
     </div>
     <div class="brand">
-        <img src="../../Assets/Main/BODYX.png" alt="brand1" class="brandlogo">
+        <img src="../../Assets/Main/BODYX.svg" alt="brand1" class="brandlogo">
         <div class="brandDescription">
             <h2><a href="https://m.bodyx.co.kr/#" target="_blank">BODYX</a></h2>
             <p>#운동기구 #카디오 #세일</p>
         </div>
         <button type="button" class="submit-button" onclick="addPartnership('BODYX')">
-            제휴맺기
+            제휴 맺기
         </button>
     </div>
   </div>
 
     <div class="footer">
       <div class="weare1ne">
-        <img src="../../Assets/Main/Logo_mono.svg" alt="Logo" class="bottom-logo" />
+        <img src="../../Assets/Main/Logo.svg" alt="Logo" class="bottom-logo" />
         <div class="text">
           <div class="we">WeAre1ne</div>
           <div class="team">Team Calm Down</div>
