--- a/Presentation/Attendance/attendance.html
+++ b/Presentation/Attendance/attendance.html
@@ -28,7 +28,7 @@
             <a href="#">운영지원</a>
             <div class="snb">
               <ul>
-                <li>창고채우기</li>
+                <li><a href="../Filling/filling.html">창고채우기</a></li>
                 <li><a href="../Secondhand/secondhand.html">당근</a></li>
               </ul>
             </div>
