--- a/Presentation/Secondhand/secondhand.html
+++ b/Presentation/Secondhand/secondhand.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>건강공강</title>
+    <title>운영지원 - 당근</title>
     <link rel="stylesheet" href="secondhand.css" />
     <link
       rel="stylesheet"
@@ -10,8 +10,8 @@
     />
   </head>
   <body>
-    <img src="../../Assets/Main/WebLogo.svg" alt="Logo" class="logo" />
     <div id="wrap">
+      <img src="../../Assets/Main/HeaderLogo.svg" alt="Logo" class="logo" />
       <div id="header">
         <ul id="gnb" class="">
           <li>
@@ -28,7 +28,7 @@
             <a href="#">운영지원</a>
             <div class="snb">
               <ul>
-                <li>창고채우기</li>
+                <li><a href="../Filling/filling.html">창고채우기</a></li>
                 <li><a href="../Secondhand/secondhand.html">당근</a></li>
               </ul>
             </div>
@@ -39,15 +39,25 @@
             <div class="snb">
               <ul>
                 <li>
-                  <a href="../Profile/profile.html" class="goto-profile"
-                    >공장장관리</a
-                  >
+                  <a href="../Profile/profile.html">공장장관리</a>
                 </li>
               </ul>
             </div>
           </li>
         </ul>
       </div>
+      <div class="search-container">
+        <input
+          type="text"
+          name="Search"
+          class="search"
+          placeholder="Search..."
+        />
+      </div>
+    </div>
+
+    <div class="display">
+      <h5>운영지원 > 당근</h5>
     </div>
 
     <div class="secondhand-list" id="post-list"></div>
@@ -55,7 +65,7 @@
     <div class="footer">
       <div class="weare1ne">
         <img
-          src="../../Assets/Main/Logo_mono.svg"
+          src="../../Assets/Main/Logo.svg"
           alt="Logo"
           class="bottom-logo"
         />
@@ -77,6 +87,7 @@
         <img src="../../Assets/Main/Git.svg" alt="Icon" class="sns-icon" />
       </div>
     </div>
+    
     <button class="add-button" onclick="openModal()">+</button>
     <div id="modal" class="modal">
       <div class="modal-content">
