[Feat] #40 - profile 페이지 수정

--- a/Presentation/Main/main.html
+++ b/Presentation/Main/main.html
@@ -29,7 +29,7 @@
                 <input type="text" id="name" placeholder="이름" />
               </div>
               <div class="form-group">
-                <input type="text" id="company" placeholder="연락처" />
+                <input type="text" id="company" placeholder="업체명" />
               </div>
               <div class="form-group">
                 <input
