[Feat] #42 - 각종 화면 구성

--- a/Presentation/Filling/filling.html
+++ b/Presentation/Filling/filling.html
@@ -53,26 +53,38 @@
           placeholder="Search..."
         />
       </div>
-  </div>
+    </div>
 
-  <div class="display">
-    <h5>운영지원 > 창고채우기</h5>
-  </div>
-  
-  <div class="warehouse">
-    <div class="brand">
-        <img src="../../Assets/Main/LABNOSH.svg" alt="brand1" class="brandlogo">
+    <div class="display">
+      <h5>운영지원 > 창고채우기</h5>
+    </div>
+
+    <div class="warehouse">
+      <div class="brand">
+        <img
+          src="../../Assets/Main/LABNOSH.svg"
+          alt="brand1"
+          class="brandlogo"
+        />
 
         <div class="brandDescription">
           <h2><a href="https://labnosh.com/" target="_blank">LABNOSH</a></h2>
           <p>#단백질 #쿠키 #저당음료</p>
         </div>
-        <button type="button" class="submit-button" onclick="addPartnership('LABNOSH')">
-            제휴 맺기
+        <button
+          type="button"
+          class="submit-button"
+          onclick="addPartnership('LABNOSH')"
+        >
+          제휴 맺기
         </button>
-    </div>
-    <div class="brand">
-        <img src="../../Assets/Main/CALOBYE.svg" alt="brand2" class="brandlogo">
+      </div>
+      <div class="brand">
+        <img
+          src="../../Assets/Main/CALOBYE.svg"
+          alt="brand2"
+          class="brandlogo"
+        />
 
         <div class="brandDescription">
           <h2>
@@ -82,30 +94,37 @@
           </h2>
           <p>#김종국광고 #마그네슘 #단백질쉐이크</p>
         </div>
-        <button type="button" class="submit-button" onclick="addPartnership('CALOBYE')">
-            제휴 맺기
+        <button
+          type="button"
+          class="submit-button"
+          onclick="addPartnership('CALOBYE')"
+        >
+          제휴 맺기
         </button>
-    </div>
-    <div class="brand">
-        <img src="../../Assets/Main/BODYX.svg" alt="brand1" class="brandlogo">
+      </div>
+      <div class="brand">
+        <img src="../../Assets/Main/BODYX.svg" alt="brand1" class="brandlogo" />
         <div class="brandDescription">
           <h2><a href="https://m.bodyx.co.kr/#" target="_blank">BODYX</a></h2>
           <p>#운동기구 #카디오 #세일</p>
         </div>
-        <button type="button" class="submit-button" onclick="addPartnership('BODYX')">
-            제휴 맺기
+        <button
+          type="button"
+          class="submit-button"
+          onclick="addPartnership('BODYX')"
+        >
+          제휴 맺기
         </button>
       </div>
     </div>
 
     <div class="footer">
       <div class="weare1ne">
-        <img src="../../Assets/Main/Logo.svg" alt="Logo" class="bottom-logo" />
-
-        <div class="text">
-          <div class="we">WeAre1ne</div>
-          <div class="team">Team Calm Down</div>
-        </div>
+        <img
+          src="../../Assets/Main/FooterLogo.svg"
+          alt="Logo"
+          class="bottom-logo"
+        />
       </div>
       <div class="middle-wrapper">
         <div class="middle2">© 2024 WR1 Company, Inc. All rights reserved</div>
