--- a/Presentation/Profile/profile.html
+++ b/Presentation/Profile/profile.html
@@ -105,19 +105,19 @@
                 <tr>
                   <td>1</td>
                   <td>기업복지몰</td>
-                  <td>2024-07-21</td>
+                  <td>2024-07-22</td>
                   <td><button class="delete-button">제휴 해지</button></td>
                 </tr>
                 <tr>
                   <td>2</td>
                   <td>BTMS</td>
-                  <td>2024-06-08</td>
+                  <td>2024-07-22</td>
                   <td><button class="delete-button">제휴 해지</button></td>
                 </tr>
                 <tr>
                   <td>3</td>
                   <td>머신머신</td>
-                  <td>2024-06-03</td>
+                  <td>2024-07-22</td>
                   <td><button class="delete-button">제휴 해지</button></td>
                 </tr>
               </tbody>
@@ -129,7 +129,11 @@
 
     <div class="footer">
       <div class="weare1ne">
-        <img src="../../Assets/Main/Logo.svg" alt="Logo" class="bottom-logo" />
+        <img
+          src="../../Assets/Main/FooterLogo.svg"
+          alt="Logo"
+          class="bottom-logo"
+        />
       </div>
       <div class="middle-wrapper">
         <div class="middle2">© 2024 WR1 Company, Inc. All rights reserved</div>
