--- a/Presentation/Secondhand/secondhand.html
+++ b/Presentation/Secondhand/secondhand.html
@@ -65,14 +65,10 @@
     <div class="footer">
       <div class="weare1ne">
         <img
-          src="../../Assets/Main/Logo.svg"
+          src="../../Assets/Main/FooterLogo.svg"
           alt="Logo"
           class="bottom-logo"
         />
-        <div class="text">
-          <div class="we">WeAre1ne</div>
-          <div class="team">Team Calm Down</div>
-        </div>
       </div>
       <div class="middle-wrapper">
         <div class="middle2">© 2024 WR1 Company, Inc. All rights reserved</div>
@@ -87,7 +83,7 @@
         <img src="../../Assets/Main/Git.svg" alt="Icon" class="sns-icon" />
       </div>
     </div>
-    
+
     <button class="add-button" onclick="openModal()">+</button>
     <div id="modal" class="modal">
       <div class="modal-content">
