--- a/Presentation/Attendance/attendance.html
+++ b/Presentation/Attendance/attendance.html
@@ -71,7 +71,7 @@
           </div>
         </div>
         <div class="description">
-          <img src="../../Assets/Main/clock.svg" class="clock">
+          <img src="../../Assets/Main/clock.svg" class="clock" />
           <div id="submissionTime"></div>
         </div>
         <button type="button" class="logout-button" onclick="logout()">
@@ -82,14 +82,10 @@
     <div class="footer">
       <div class="weare1ne">
         <img
-          src="../../Assets/Main/Logo_mono.svg"
+          src="../../Assets/Main/FooterLogo.svg"
           alt="Logo"
           class="bottom-logo"
         />
-        <div class="text">
-          <div class="we">WeAre1ne</div>
-          <div class="team">Team Calm Down</div>
-        </div>
       </div>
       <div class="middle-wrapper">
         <div class="middle2">© 2024 WR1 Company, Inc. All rights reserved</div>
